# splent_feature_redis

./: .gitignore  MANIFEST.in  pyproject.toml
docker/: .env.example  docker-compose.yml
src/splent_feature_redis/: config.py
src/splent_io/splent_feature_redis/: __init__.py  config.py
