[build-system]
requires = ["setuptools>=80.3.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "splent_feature_redis"
version = "1.1.0"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [

]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.splent.contract]
description = "Redis integration: configures Redis-backed sessions via inject_config"

[tool.splent.contract.provides]
routes = []
blueprints = ["redis_bp"]
models = []
commands = []

[tool.splent.contract.requires]
features = []
env_vars = ["REDIS_URL"]
